# todos-graphql-api

./: .env  Cargo.toml
migrations/2023-08-19-213237_create_todos/: up.sql
src/: graphql_schema.rs  main.rs  schema.rs
